--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="delete_recipe">Delete Recipe</string>
     <string name="home">Home</string>
     <string name="share_button">Share</string>
+    <string name="save_recipe">Save Recipe</string>
 </resources>
