--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="home">Home</string>
     <string name="share_button">Share</string>
     <string name="save_recipe">Save</string>
+    <string name="remove_recipe">Remove</string>
 </resources>
